--- a/mex01/index.html
+++ b/mex01/index.html
@@ -14,6 +14,7 @@
 		<div class="container">
 			<div class="wrapper">
 				<div id="box header">
+            <p>Holi</p>
 				</div>
 
 	<!--Container for visualization-->
@@ -26,10 +27,18 @@
 					</div>
 				</div>
 				<div id="tools" class="box sidebar2">
-				  <h4>Traffic incidents involving bikes<h4>
-				</div>
+          <h4>Data Analysis</h4>
+            <div class="options">
+              <form action="javascript:handleIt">
+                <input type="checkbox" name="bikes" id="bikes">
+                Traffic incidents with Bikes involved:
+              </form>
+              <p> Colisión con ciclista Hecho en el cual un vehículo automotor de cualquier tipo, arrolla a un ciclista sobre la vía de circulación o en un cruce vial</p>
+            </div>
+        </div>
 			</div>
 		</div>
 		<script src="code.js"></script>
+    <script src="bike.js"></script>
   </body>
 </html>
